--- a/BudgieBudgeting/Pages/Create_Budget.cshtml
+++ b/BudgieBudgeting/Pages/Create_Budget.cshtml
@@ -60,7 +60,7 @@
                                 <div class="budget-column" id="needsColumn">
                                     <h4 style="text-align:center;">Needs</h4>
                                     <div class="entry-container">
-                                        <textarea class="form-control" name="Needs[]" placeholder="Enter needs"></textarea>
+                                        <textarea class="form-control" id="Needs[]" name="Needs[]" placeholder="Enter needs"></textarea>
                                         <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
                                             <i class="fas fa-trash"></i>
                                         </button>
