--- a/BudgieBudgeting/Pages/Update_Budget.cshtml
+++ b/BudgieBudgeting/Pages/Update_Budget.cshtml
@@ -62,8 +62,8 @@
                                     @for (int i = 0; i < Model.Needs.Count; i++)
                                     {
                                         <div class="entry-container">
-                                            <textarea class="form-control" name="Wants" asp-for="Needs[i].NeedName" value="@Model.Needs[i].NeedName"></textarea>
-                                            <textarea class="form-control" name="Wants" asp-for="Needs[i].NeedValue" value="@Model.Needs[i].NeedValue"></textarea>
+                                            <textarea class="form-control" name="Need" asp-for="Needs[i].NeedName" value="Needs[i].NeedName"></textarea>
+                                            <input class="form-control" name="Need" asp-for="Needs[i].NeedValue" value="Needs[i].NeedValue"></input>
                                             <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
                                                 <i class="fas fa-trash"></i>
                                             </button>
@@ -71,7 +71,7 @@
                                     }
                                     <!-- Retrieve data from database here for needs -->
                                     <div class="add-button">
-                                        <button type="button" class="btn btn-primary" onclick="addEntry('needsColumn', 'Needs')">+</button>
+                                        <button type="button" class="btn btn-primary" onclick="addEntry('needsColumn', 'Need')">+</button>
                                     </div>
                                 </div>
                                 <div class="budget-column" id="wantsColumn">
@@ -79,8 +79,8 @@
                                     @for (int i = 0; i < Model.Wants.Count; i++)
                                     {
                                         <div class="entry-container">
-                                            <textarea class="form-control" name="Wants" asp-for="Wants[i].WantName" value="@Model.Wants[i].WantName"></textarea>
-                                            <textarea class="form-control" name="Wants" asp-for="Wants[i].WantValue" value="@Model.Wants[i].WantValue"></textarea>
+                                            <textarea class="form-control" name="Want" asp-for="Wants[i].WantName" value="Wants[i].WantName"></textarea>
+                                            <input class="form-control" name="Want" asp-for="Wants[i].WantValue" value="Wants[i].WantValue"></input>
                                             <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
                                                 <i class="fas fa-trash"></i>
                                             </button>
@@ -88,7 +88,7 @@
                                     }
                                     <!-- Retrieve data from database here for wants -->
                                     <div class="add-button">
-                                        <button type="button" class="btn btn-primary" onclick="addEntry('wantsColumn', 'Wants')">+</button>
+                                        <button type="button" class="btn btn-primary" onclick="addEntry('wantsColumn', 'Want')">+</button>
                                     </div>
                                 </div>
                                 <div class="budget-column" id="savingsColumn">
@@ -96,8 +96,8 @@
                                     @for (int i = 0; i < Model.Savings.Count; i++)
                                     {
                                         <div class="entry-container">
-                                            <textarea class="form-control" name="Wants" asp-for="Savings[i].SavingName" value="@Model.Savings[i].SavingName"></textarea>
-                                            <textarea class="form-control" name="Wants" asp-for="Savings[i].SavingValue" value="@Model.Savings[i].SavingValue"></textarea>
+                                            <textarea class="form-control" name="Saving" asp-for="Savings[i].SavingName" value="Savings[i].SavingName"></textarea>
+                                            <input class="form-control" name="Saving" asp-for="Savings[i].SavingValue" value="Savings[i].SavingValue"></input>
                                             <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
                                                 <i class="fas fa-trash"></i>
                                             </button>
@@ -105,7 +105,7 @@
                                     }
                                     <!-- Retrieve data from database here for savings -->
                                     <div class="add-button">
-                                        <button type="button" class="btn btn-primary" onclick="addEntry('savingsColumn', 'Savings')">+</button>
+                                        <button type="button" class="btn btn-primary" onclick="addEntry('savingsColumn', 'Saving')">+</button>
                                     </div>
                                 </div>
                             </div>
@@ -125,8 +125,9 @@
             var newEntry = document.createElement('div');
             newEntry.className = 'entry-container';
             newEntry.innerHTML = `
-                                <textarea class="form-control" name="${name}[]" placeholder="Enter ${name.toLowerCase()}"></textarea>
-                                <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
+                                    <textarea class="form-control" name="${name}" asp-for="${name}[i].${name}Name" value="${name}s[${name}.Count-1].${name}Name"></textarea>
+                                    <input class="form-control" name="${name}" asp-for="${name}s[i].SavingValue" value="'${name}s[${name}.Count-1].${name}Value}''"></input>
+                                    <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             `;
