--- a/BudgieBudgeting/Pages/Update_Budget.cshtml
+++ b/BudgieBudgeting/Pages/Update_Budget.cshtml
@@ -62,9 +62,9 @@
                                     @for (int i = 0; i < Model.Needs.Count; i++)
                                     {
                                         <div class="entry-container">
-                                            <textarea class="form-control" name="Need" asp-for="Needs[i].NeedName" value="Needs[i].NeedName"></textarea>
-                                            <input class="form-control" name="Need" asp-for="Needs[i].NeedValue" value="Needs[i].NeedValue"></input>
-                                            <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
+                                            <textarea class="form-control" name="Need" asp-for="Needs[i].NeedName" value="@Model.Needs[i].NeedName"></textarea>
+                                            <input class="form-control" name="Need" asp-for="Needs[i].NeedValue" value="@Model.Needs[i].NeedValue"></input>
+                                            <button type="button" class="btn btn-danger btn-sm" asp-action="@{Model.DeactivateNeed(Model.Needs[i]);}" onclick="removeEntry(this)">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         </div>
@@ -79,9 +79,9 @@
                                     @for (int i = 0; i < Model.Wants.Count; i++)
                                     {
                                         <div class="entry-container">
-                                            <textarea class="form-control" name="Want" asp-for="Wants[i].WantName" value="Wants[i].WantName"></textarea>
-                                            <input class="form-control" name="Want" asp-for="Wants[i].WantValue" value="Wants[i].WantValue"></input>
-                                            <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
+                                            <textarea class="form-control" name="Want" asp-for="Wants[i].WantName" value="@Model.Wants[i].WantName"></textarea>
+                                            <input class="form-control" name="Want" asp-for="Wants[i].WantValue" value="@Model.Wants[i].WantValue"></input>
+                                            <button type="button" class="btn btn-danger btn-sm" asp-action="@{Model.DeactivateWant(Model.Wants[i]);}" onclick="removeEntry(this)">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         </div>
@@ -96,9 +96,9 @@
                                     @for (int i = 0; i < Model.Savings.Count; i++)
                                     {
                                         <div class="entry-container">
-                                            <textarea class="form-control" name="Saving" asp-for="Savings[i].SavingName" value="Savings[i].SavingName"></textarea>
-                                            <input class="form-control" name="Saving" asp-for="Savings[i].SavingValue" value="Savings[i].SavingValue"></input>
-                                            <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
+                                            <textarea class="form-control" name="Saving" asp-for="Savings[i].SavingName" value="@Model.Savings[i].SavingName"></textarea>
+                                            <input class="form-control" name="Saving" asp-for="Savings[i].SavingValue" value="@Model.Savings[i].SavingValue"></input>
+                                            <button type="button" class="btn btn-danger btn-sm" asp-action="@{Model.DeactivateSaving(Model.Savings[i]);}" onclick="removeEntry(this)">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         </div>
@@ -121,20 +121,37 @@
 
     <script>
         function addEntry(containerId, name) {
+
+            if(name == "Need"){
+                @{
+                    Model.AddNeed();
+                }
+            }
+            else if(name == "Want"){
+                @{
+                    Model.AddWant();
+                }
+            }
+            else if(name == "Saving"){
+                @{
+                    Model.AddSaving();
+                }
+            }
             var container = document.getElementById(containerId);
             var newEntry = document.createElement('div');
             newEntry.className = 'entry-container';
             newEntry.innerHTML = `
-                                    <textarea class="form-control" name="${name}" asp-for="${name}[i].${name}Name" value="${name}s[${name}.Count-1].${name}Name"></textarea>
-                                    <input class="form-control" name="${name}" asp-for="${name}s[i].SavingValue" value="'${name}s[${name}.Count-1].${name}Value}''"></input>
-                                    <button type="button" class="btn btn-danger btn-sm" onclick="removeEntry(this)">
+                                    <textarea class="form-control" name="${name}" asp-for="${name}s[${name}s.Count-1].${name}Name" value=""></textarea>
+                                    <input class="form-control" name="${name}" asp-for="${name}s[${name}s.Count-1].${name}Value" value=""></input>
+                                    <button type="button" class="btn btn-danger btn-sm" asp-action="@@{Deactivate${name}(Model.${name}s[i]);}" onclick="removeEntry(this)">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             `;
             container.querySelector('.add-button').before(newEntry);
         }
 
-        function removeEntry(button) {
+        function removeEntry(button,name,) {
+            
             // Remove the entry (textarea and button) that corresponds to the trash icon clicked
             var entryContainer = button.parentElement;
             entryContainer.remove();
